html tab filter modified

--- a/About.html
+++ b/About.html
@@ -465,7 +465,7 @@
               <li class="image-item"  data-target="havana">
                 <div class="tab-wrapp">
                 <figure class="tab-fig">
-                  <img src="assets/images/cities-01.jpg" alt="">
+                  <img src="assets/images/cities-01.jpg" alt="havan">
                 </figure>
                 <div class="image-text">
                   <h4 class="city-title">Havana</h4>
