--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="#FIXME" class="nav-link active" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
-            <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
+            <li class="nav-item"><a href="re" class="nav-link" title="Reservation">Reservation</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Book Yours">Book Yours</a></li>
           </ul>
         </nav>
@@ -69,15 +69,15 @@
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66">8.66M</span>
+                  <span class="counter-Num" data-target="8.66">0</span>
                 </li>
                 <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290">41.290 KM2</span>
+                  <span class="counter-Num" data-target="41.290">0</span>
                 </li>
                 <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">$1.100.200</span>
+                  <span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
               </ul>
               <div class="counter control">
@@ -87,7 +87,7 @@
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
-              <img src="assets/images/banner-02.jpg" alt="Banner Image">
+              <img src="assets/images/banner-01.jpg" alt="Banner Image">
             </figure>
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
@@ -95,30 +95,30 @@
               <div class="banner-btn">
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
-              <div class="counter-part">
-                <ul class="counter-list">
-                  <li class="counter-item user">
-                    <h5 class="counter-heading">population:</h5>
-                    <span class="counter-Num" data-target="8.66">0</span>
-                  </li>
-                  <li class="counter-item world">
-                    <h5 class="counter-heading">Territory:</h5>
-                    <span class="counter-Num" data-target="41.290">0</span>
-                  </li>
-                  <li class="counter-item home">
-                    <h5 class="counter-heading">AVG Price:</h5>
-                    <span class="counter-Num" data-target="1.100.200">0</span>
-                  </li>
-                </ul>
-                <div class="counter control">
-                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-                </div>
+            </div>
+            <div class="counter-part">
+              <ul class="counter-list">
+                <li class="counter-item user">
+                  <h5 class="counter-heading">population:</h5>
+                  <span class="counter-Num" data-target="8.66 M">M</span>
+                </li>
+                <li class="counter-item world">
+                  <h5 class="counter-heading">Territory:</h5>
+                  <span class="counter-Num" data-target="41.290 KM2">0</span>
+                </li>
+                <li class="counter-item home">
+                  <h5 class="counter-heading">AVG Price:</h5>
+                  <span class="counter-Num" data-target="1.100.200">0</span>
+                </li>
+              </ul>
+              <div class="counter control">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
               </div>
             </div>
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
-              <img src="assets/images/banner-03.jpg" alt="Banner Image">
+              <img src="assets/images/banner-01.jpg" alt="Banner Image">
             </figure>
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
@@ -126,6 +126,8 @@
               <div class="banner-btn">
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
+            </div>
+            <div class="counter-part">
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
@@ -139,14 +141,15 @@
                   <h5 class="counter-heading">AVG Price:</h5>
                   <span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
-                <li class="counter-item">
-                </li>
               </ul>
+              <div class="counter control">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </div>
             </div>
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
-              <img src="assets/images/banner-04.jpg" alt="Banner Image">
+              <img src="assets/images/banner-01.jpg" alt="Banner Image">
             </figure>
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
@@ -154,6 +157,8 @@
               <div class="banner-btn">
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
+            </div>
+            <div class="counter-part">
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
@@ -167,18 +172,12 @@
                   <h5 class="counter-heading">AVG Price:</h5>
                   <span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
-                <li class="counter-item">
-                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-                </li>
               </ul>
+              <div class="counter control">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </div>
             </div>
           </li>
-        </ul>
-        <ul class="banner-control">
-          <li class="control-item">1</li>
-          <li class="control-item">2</li>
-          <li class="control-item">3</li>
-          <li class="control-item">4</li>
         </ul>
       </section>
       <!-- banner slide end here -->
@@ -192,7 +191,7 @@
             <ul class="country-list">
               <li class="country-item">
                 <figure class="country-fig">
-                  <img src="/assets/images/country-01.jpg" alt="Country Image">
+                  <img src="/assets/images/country-01.jpg" alt="Country Image" class="img">
                 </figure>
                 <div class="country-content">
                   <div class="country-data">
@@ -217,7 +216,7 @@
               </li>
               <li class="country-item">
                 <figure class="country-fig">
-                  <img src="/assets/images/country-02.jpg" alt="Country Image">
+                  <img src="/assets/images/country-02.jpg" alt="Country Image" class="img">
                 </figure>
                 <div class="country-content">
                   <div class="country-data">
@@ -241,7 +240,7 @@
               </li>
               <li class="country-item">
                 <figure class="country-fig">
-                  <img src="/assets/images/country-03.jpg" alt="Country Image">
+                  <img src="/assets/images/country-03.jpg" alt="Country Image" class="img">
                 </figure>
                 <div class="country-content">
                   <div class="country-data">
@@ -252,7 +251,8 @@
                     <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
                   </div>
                   <p class="data-description">We hope this woOx templateis useful for you, please support us a <a
-                      href="#FIXME" title="Paypal">small amount of paypal</a>to info [at] template.com for our survival. we really appreciate your contribution.</p>
+                      href="#FIXME" title="Paypal">small amount of paypal</a> to info [at] template.com for our
+                    survival. we really appreciate your contribution.</p>
                   <ul class="people-data">
                     <li class="people-list user">67.41 Mil people</li>
                     <li class="people-list world">551.500 km2</li>
@@ -273,7 +273,7 @@
               </div>
               <div class="btn-ctrl">
                 <button class="page-btn">1</button>
-                <button class="page-btn">2</button>
+                <button class="page-btn active">2</button>
                 <button class="page-btn">3</button>
               </div>
             </div>
@@ -299,8 +299,8 @@
 
     <!--footer section start-->
     <footer>
-      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME"
-          title="TemplateMo" class="copy-link">Design: TemplateMo</a></p>
+      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME" title="TemplateMo"
+          class="copy-link">Design: TemplateMo</a></p>
     </footer>
     <!--footer section end-->
     <!-- scroll to up start here -->
